fix(unimodal): roll back overflow to auto
design of modal was broken becasue of style of batchInvoice modal. 
design was rollback and style is set just to the batch invoice modal.

closes: #5658 
ref: TC-841

--- a/src/styles/uni-redesign/_redesign-modal.sass
+++ b/src/styles/uni-redesign/_redesign-modal.sass
@@ -46,7 +46,7 @@
 
     > article
         flex: 1
-        overflow: unset
+        overflow: auto
         padding: 1rem 3rem
 
         &.scrollable
